1. fix contact layout 2. fix body overflow

--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -1865,7 +1865,7 @@ tbody.collapse.in { display: table-row-group; }
 @media print { /* line 18, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/bootstrap/bootstrap/mixins/_responsive-visibility.scss */
   .hidden-print { display: none !important; } }
 /* line 1, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
-body { background-color: #3C4512; }
+body { background-color: #3C4512; font-family: Helvetica, arial, "Microsoft JhengHei UI", "Kozuka Gothic Pro", "Myriad Pro"; }
 
 /* line 4, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
 .header { padding: 38px 0; }
@@ -1997,14 +1997,12 @@ footer { background: #819429; border-bottom: #3C4512 10px solid; padding: 38px 0
   /* line 222, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
   .banner { overflow: hidden; width: 100%; }
   /* line 225, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
-  body { overflow: hidden; }
-  /* line 227, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
   .mob-menu-list { width: 60vw; height: 100%; height: 100vh; position: fixed; top: 0; right: 0vw; overflow: hidden; background-color: #91A62A; opacity: 0; display: block; webkit-transition: 0.2s; -o-transition: 0.2s; transition: 0.2s; }
-  /* line 239, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
+  /* line 237, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
   .mob-menu-list.active { opacity: 1; }
-  /* line 243, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
+  /* line 241, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
   .wrap { position: relative; left: 0vw; z-index: 2; webkit-transition: 0.3s; -o-transition: 0.3s; transition: 0.3s; -webkit-transition-timing-function: linear; transition-timing-function: linear; }
-  /* line 250, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
+  /* line 248, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
   .wrap.active { left: -60vw; } }
 /* No files to import found in modules/* */
 /* line 1, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/pages/_about.sass */
